--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+*:focus {
+  outline: none;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-float infinite 3s ease-in-out;
